dot-location - dots should apply to a property on newline rather than the object on previous line

--- a/.eslintrc
+++ b/.eslintrc
@@ -54,6 +54,10 @@
         "skipBlankLines": false
       }
     ],
+    "dot-location": [
+      2,
+      "property"
+    ],
     "no-fallthrough": 0,
     "default-case": 0,
     "no-plusplus": 0,
