--- a/.eslintrc
+++ b/.eslintrc
@@ -60,7 +60,11 @@
     ],
     "space-after-keywords": 2,
     "space-before-keywords": 2,
+    "space-before-blocks": 2,
     "space-before-function-paren": 2,
+    "space-infix-ops": 2,
+    "space-return-throw-case": 2,
+    "space-unary-ops": 2,
     "no-fallthrough": 0,
     "default-case": 0,
     "no-plusplus": 0,
