--- a/.eslintrc
+++ b/.eslintrc
@@ -68,6 +68,7 @@
     "no-fallthrough": 0,
     "default-case": 0,
     "no-plusplus": 0,
+    "no-lone-blocks": 2,
     "no-lonely-if": 2,
     "no-nested-ternary": 2,
     "no-mixed-spaces-and-tabs": 2,
