--- a/.eslintrc
+++ b/.eslintrc
@@ -69,6 +69,7 @@
     "default-case": 0,
     "no-plusplus": 0,
     "no-lone-blocks": 2,
+    "eqeqeq": 2,
     "no-lonely-if": 2,
     "no-nested-ternary": 2,
     "no-mixed-spaces-and-tabs": 2,
