--- a/.eslintrc
+++ b/.eslintrc
@@ -70,6 +70,7 @@
     "no-plusplus": 0,
     "no-lone-blocks": 2,
     "eqeqeq": 2,
+    "dot-notation": 2,
     "no-lonely-if": 2,
     "no-nested-ternary": 2,
     "no-mixed-spaces-and-tabs": 2,
