--- a/.eslintrc
+++ b/.eslintrc
@@ -71,6 +71,7 @@
     "no-lone-blocks": 2,
     "eqeqeq": 2,
     "dot-notation": 2,
+    "block-scoped-var": 2,
     "no-lonely-if": 2,
     "no-nested-ternary": 2,
     "no-mixed-spaces-and-tabs": 2,
