--- a/.eslintrc
+++ b/.eslintrc
@@ -72,6 +72,7 @@
     "eqeqeq": 2,
     "dot-notation": 2,
     "block-scoped-var": 2,
+    "no-constant-condition": 2,
     "no-lonely-if": 2,
     "no-nested-ternary": 2,
     "no-mixed-spaces-and-tabs": 2,
