--- a/.eslintrc
+++ b/.eslintrc
@@ -65,12 +65,8 @@
     "space-infix-ops": 2,
     "space-return-throw-case": 2,
     "space-unary-ops": 2,
-    "no-fallthrough": 0,
-    "default-case": 0,
-    "no-plusplus": 0,
     "no-lone-blocks": 2,
     "eqeqeq": 2,
-    "dot-notation": 2,
     "block-scoped-var": 2,
     "no-constant-condition": 2,
     "no-lonely-if": 2,
@@ -93,7 +89,11 @@
     "no-undef-init": 2,
     "no-use-before-define": 2,
     "radix": 2,
-    "curly": 2
+    "curly": 2,
+    "no-fallthrough": 0,
+    "default-case": 0,
+    "no-plusplus": 0,
+    "dot-notation": 0
   },
   "env": {
     "browser": true,
