--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/dabapps/eslint-config",
   "dependencies": {
+    "eslint": "=1.5.0",
     "eslint-plugin-react": "=3.4.2"
   }
 }
