Require trailing newline
At @tony's insistence because *nix

--- a/.eslintrc
+++ b/.eslintrc
@@ -93,7 +93,8 @@
     "no-fallthrough": 0,
     "default-case": 0,
     "no-plusplus": 0,
-    "dot-notation": 0
+    "dot-notation": 0,
+    "eol-last": 2
   },
   "env": {
     "browser": true,
